# IDDRRA_project

./: CMakeLists.txt  Doxyfile  IDDRRAsetup.sh  README.md  install.sh  main.cc
Simulation_input/: IDDRRA.in  vis.mac
depedencies/: README.txt
doc/html/: _action_initialization_8cc.html  _action_initialization_8cc__incl.map  _action_initialization_8cc__incl.md5  _action_initialization_8hh.html  _action_initialization_8hh__dep__incl.map  _action_initialization_8hh__dep__incl.md5  _action_initialization_8hh__incl.map  _action_initialization_8hh__incl.md5  _action_initialization_8hh_source.html  _analysis_8hh_source.html  _command_line_parser_8cc.html  _command_line_parser_8cc__incl.map  _command_line_parser_8cc__incl.md5  _command_line_parser_8hh.html  _command_line_parser_8hh__dep__incl.map  _command_line_parser_8hh__dep__incl.md5  _command_line_parser_8hh__incl.map  _command_line_parser_8hh__incl.md5  _command_line_parser_8hh_source.html  _detector_construction_8cc.html  _detector_construction_8cc__incl.map  _detector_construction_8cc__incl.md5  _detector_construction_8hh.html  _detector_construction_8hh__dep__incl.map  _detector_construction_8hh__dep__incl.md5  _detector_construction_8hh__incl.map  _detector_construction_8hh__incl.md5  _detector_construction_8hh_source.html  _detector_messenger_8cc.html  _detector_messenger_8cc__incl.map  _detector_messenger_8cc__incl.md5  _detector_messenger_8hh.html  _detector_messenger_8hh__dep__incl.map  _detector_messenger_8hh__dep__incl.md5  _detector_messenger_8hh__incl.map  _detector_messenger_8hh__incl.md5  _detector_messenger_8hh_source.html  _event_action_8cc.html  _event_action_8cc__incl.map  _event_action_8cc__incl.md5  (+329 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  (+21 more)
doc/latex/: _action_initialization_8cc.tex  _action_initialization_8cc__incl.md5  _action_initialization_8hh.tex  _action_initialization_8hh__dep__incl.md5  _action_initialization_8hh__incl.md5  _command_line_parser_8cc.tex  _command_line_parser_8cc__incl.md5  _command_line_parser_8hh.tex  _command_line_parser_8hh__dep__incl.md5  _command_line_parser_8hh__incl.md5  _detector_construction_8cc.tex  _detector_construction_8cc__incl.md5  _detector_construction_8hh.tex  _detector_construction_8hh__dep__incl.md5  _detector_construction_8hh__incl.md5  _detector_messenger_8cc.tex  _detector_messenger_8cc__incl.md5  _detector_messenger_8hh.tex  _detector_messenger_8hh__dep__incl.md5  _detector_messenger_8hh__incl.md5  _event_action_8cc.tex  _event_action_8cc__incl.md5  _event_action_8hh.tex  _event_action_8hh__dep__incl.md5  _event_action_8hh__incl.md5  _event_action_messenger_8cc.tex  _event_action_messenger_8cc__incl.md5  _event_action_messenger_8hh.tex  _event_action_messenger_8hh__dep__incl.md5  _event_action_messenger_8hh__incl.md5  _mainwindow_8h.tex  _mainwindow_8h__incl.md5  _p_d_batom_8cc.tex  _p_d_batom_8cc__incl.md5  _p_d_batom_8hh.tex  _p_d_batom_8hh__dep__incl.md5  _p_d_batom_8hh__incl.md5  _p_d_bbarycenter_8cc.tex  _p_d_bbarycenter_8cc__incl.md5  _p_d_bbarycenter_8hh.tex  (+98 more)
icons/: icons.qrc
include/: ActionInitialization.hh  EventAction.hh  Mainwindow.h  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  RunSimulation.h  SimulationAnalysis.h  SimulationInput.h  execSimulation.h
python/: DNA_analysis.py  DNAdesign.py  analysisOutput.txt  dnaKOZI_output_90.root  dsbCount_Upgraded.py
src/: .kdev_include_paths  ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  EventActionMessenger.cc  Mainwindow.cpp  PDBlib.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  RunSimulation.cpp  SimulationAnalysis.cpp  SimulationInput.cpp  SteppingAction.cc  execSimulation.cpp
ui/: Mainwindow.ui  RunSimulation.ui  SimulationAnalysis.ui  SimulationInput.ui
